# Throwing

./: .cproject  .project  .pydevproject  CMakeLists.txt  CreateRobotModule.sh  CreateWorldModule.sh  README.md  cmake_install.cmake  mainpage.dox  manifest.xml  package.xml
FastThrowing/include/: FastThrowing.h
FastThrowing/src/: FastThrowing.cpp
RandomThrowing/include/: RandomThrowing.h
RandomThrowing/src/: RandomThrowing.cpp
Throwing/FastThrowing/include/: Ballistic.h  FastThrowing.h
Throwing/FastThrowing/src/: Ballistic.cpp  FastThrowing.cpp
Throwing/RandomThrowing/include/: RandomThrowing.h
Throwing/RandomThrowing/src/: Ballistic.cpp  Ballistic.cpp.moved
Throwing/src/: BHandTest.cpp  SkeletonTest.cpp  UpperIK.cpp
config/: kukafastthrowing.xml  randomthrowing.xml
include/: SkeletonStreaming.h
src/: FindOptimalJoints.cpp  SkeletonStreaming.cpp
